<resources>
    <string name="app_name">YumFit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yumfit">YumFit</string>
    <string name="spl">Shop Ingredients</string>
    <string name="ss">For Any Recipe</string>
    <string name="y">Yum Fit</string>
    <string name="signwithmail">SIGN UP WITH EMAIL</string>
    <string name="facebook">FaceBook</string>
    <string name="google">Google</string>
    <string name="haveacoount">Already have an account?</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="titlesignup">Save delicious recipes and get personalized content.</string>
    <string name="displayName" />
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="next">Next</string>
    <string name="signIn">Sign In</string>
    <string name="welcom">Welcome back! Youre just a tap away from something delicious</string>
    <string name="start">START COOKING!</string>
    <string name="resetPassword">I FORGOT MY PASSWORD</string>
    <string name="reset">Password Reset</string>
    <string name="welc">We\'ve all been there. Type in Your email and we \'ll send you a reset email.</string>
    <string name="resetss">RESET</string>
    <string name="foru">FOR YOU</string>
    <string name="search">SEARCH</string>
    <string name="fav">FAVOURITE</string>
    <string name="you">YOU</string>
    <string name="fab" />
    <string name="fabb">fab</string>
    <string name="nameofMeal">Chinees Takoo</string>
    <string name="time">15min</string>
    <string name="dailyinspiration">Daily Inspiration</string>
    <string name="calender">Calender</string>
    <string name="china">China</string>
    <string name="hassan_kamal">Hassan kamal</string>
    <string name="logout">Log Out</string>
    <string name="emailss">hassankamal87992010@gmail.com</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="country">Country</string>
    <string name="ingredients">Ingredients</string>
    <string name="category">Category</string>
    <string name="recipe">RECIPE</string>
    <string name="by">by</string>
    <string name="desc">name of this meal i love asian-style marinades because they call for aggresive flavitings. garlic of course ginger usually sot fot that salty ummami. maybe some fish sauce for a litel func some jhassan nakam kamma ddjdk sjas black afgano ecause this is part of my cultue delicious.</string>
    <string name="add_to_plan">ADD TO PLAN</string>
    <string name="categories">Categories</string>
    <string name="countries">countries</string>
    <string name="Countries">Countries</string>
    <string name="egypt">Egypt</string>
    <string name="number">2</string>
    <string name="boneless_chicken_breasts">Boneless Chicken Breasts</string>
    <string name="let_s_cook_it">Let\'s Cook It.</string>
    <string name="ingredient">Ingredients.</string>
    <string name="tasty_treats_await">Tasty Treats Await!</string>
    <string name="enjoy_your_meal">Enjoy Your Meal!</string>
    <string name="empty">Time to Refuel...</string>
    <string name="meal">meal</string>
    <string name="no_result">No Result..</string>
    <string name="yor_plan">Your Plan</string>
    <string name="saturday">Saturday</string>
    <string name="add_to_calender">ADD TO CALENDER</string>
    <string name="guest">Guest</string>
    <string name="cancel">Cancel</string>
    <string name="messageAdd">You need to Sign in to add meals to Favorite</string>
    <string name="messageFav">You need to Sign in to Show Your Favorite Meals</string>
    <string name="messagePlan">You need to Sign in to Show Your Plan</string>
    <string name="addToFav">Add To Favourite</string>

    <string-array name="flags">
        <item>https://www.worldometers.info/img/flags/us-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/uk-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ca-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ch-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/hr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/nl-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/eg-flag.gif</item>
        <item>https://cdn.britannica.com/73/3473-004-6E573BFA/Flag-Philippines.jpg</item>
        <item>https://www.worldometers.info/img/flags/fr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/gr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/in-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ei-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/it-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/jm-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ja-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ke-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/my-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/mx-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/mo-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/pl-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/po-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/rs-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/sp-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/th-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ts-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/tu-flag.gif</item>
        <item>https://www.freepnglogos.com/uploads/globe-png/globe-icon-aquanox-icons-softiconsm-34.png</item>
        <item>https://www.worldometers.info/img/flags/vm-flag.gif</item>
    </string-array>
</resources>