<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.view.SearchFragment">


    <TextView
        android:id="@+id/searchTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/search"
        android:textSize="26sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/search_background"
        android:elevation="20dp"
        android:hint="@string/search_recipes"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/searchTV"
        app:layout_constraintTop_toBottomOf="@id/searchTV" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/country_radioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/etSearch">
        <RadioButton
            android:id="@+id/meal_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/meal"/>
        <RadioButton
            android:id="@+id/country_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/country"/>
        <RadioButton
            android:id="@+id/ingredient_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ingredients"/>
        <RadioButton
            android:id="@+id/category_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/category"/>
    </RadioGroup>

    <TextView
        android:id="@+id/nullTextViewInsearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp"
        android:textSize="40sp"
        android:text="@string/no_result"
        android:textColor="@color/text_grey"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"


        tools:listitem="@layout/meal_item"
        />
</androidx.constraintlayout.widget.ConstraintLayout>