<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.signup.SignupActivity">


    <TextView
        android:id="@+id/passwordReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/signup"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcominPasswordReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/titlesignup"
        android:textColor="#373737"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/passwordReset"
        app:layout_constraintTop_toBottomOf="@+id/passwordReset" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#040303"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/welcominPasswordReset"
        app:layout_constraintTop_toBottomOf="@+id/welcominPasswordReset" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#040303"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/welcominPasswordReset"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/passwordEditTextinSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textPhonetic"
        android:minHeight="48dp"
        android:textColor="#040303"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/welcominPasswordReset"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPersonName|textPassword"
        android:minHeight="48dp"
        android:textColor="#040303"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/welcominPasswordReset"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextinSignIn" />

    <Button
        android:id="@+id/resetBtn"
        style="@style/myButton"
        android:layout_width="273dp"
        android:layout_height="55dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#070707"
        android:elevation="40dp"
        android:text="@string/next"
        android:textColor="#FAF9F9"
        android:textSize="16sp"
        android:textStyle="bold"
        app:iconTint="#0E0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

    <ProgressBar
        android:id="@+id/progressBarInPasswordReset"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="@+id/confirmPasswordEditText"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>