<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.resetpassword.PasswordReset">

    <TextView
        android:id="@+id/passwordReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/reset"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcominPasswordReset"
        android:layout_width="355dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/welc"
        android:textColor="#373737"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/passwordReset"
        app:layout_constraintTop_toBottomOf="@+id/passwordReset" />

    <EditText
        android:id="@+id/emailInPasswordReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#040303"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="@+id/welcominPasswordReset"
        app:layout_constraintTop_toBottomOf="@+id/welcominPasswordReset" />


    <Button
        android:id="@+id/resetBtn"
        style="@style/myButton"
        android:layout_width="273dp"
        android:layout_height="55dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#070707"
        android:elevation="40dp"
        android:text="@string/resetss"
        android:textColor="#FAF9F9"
        android:textSize="16sp"
        android:textStyle="bold"
        app:iconTint="#0E0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInPasswordReset" />

    <ProgressBar
        android:id="@+id/progressBarInPasswordReset"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/emailInPasswordReset"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/emailInPasswordReset"
        app:layout_constraintTop_toBottomOf="@+id/emailInPasswordReset" />


</androidx.constraintlayout.widget.ConstraintLayout>