<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragments.HomeFragment">

    <TextView
        android:id="@+id/dailyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dailyinspiration"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="30dp"
        app:cardCornerRadius="40dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dailyTV">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/mealImg"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/back_register"
                app:fabCradleMargin="15dp"
                app:fabCradleRoundedCornerRadius="25dp"
                app:fabCradleVerticalOffset="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mealName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/nameofMeal"
                android:textColor="#020202"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mealImg" />

            <TextView
                android:id="@+id/timeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00090707"
                android:text="@string/time"
                android:textColor="#272727"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/mealName"
                app:layout_constraintStart_toStartOf="@id/mealName"
                android:layout_marginTop="2dp"
                android:paddingBottom="15dp"
                />


            <ImageView
                android:id="@+id/saveImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:focusable="true"
                android:src="@drawable/solid_love"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/mealName"
                app:tint="#AC0303"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardMeal"
        android:layout_marginTop="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/countryRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="5dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoriesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countryRecyclerView"
                app:layout_goneMarginTop="20dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>